[package]
name = "macro-utils"
version = "0.1.0"
edition = "2021"
authors = ["Ban Mengtao <jiuxie@outlook.com>"]
keywords = ["rust", "async", "select"]
description = "Waits on multiple concurrent branches."
license = "MIT"
repository = "https://github.com/goldwind-ting/select_macro/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"